<resources>
    <string name="app_name">Learn Japanese</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="learn_japanese_for_communications">Learn Japanese For Communications</string>
    <string name="developed_by_vnshineteam">Developed by VnShineTeam</string>
    <string name="test">Test</string>
    <string name="incorrect">Incorrect!</string>
    <string name="hearing_nothing">We couldn\'t hear anything</string>
    <string name="processing">Processing...</string>
    <string name="no_internet">No internet connection!</string>
    <string name="exit">exit</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_exit" translatable="false">Are you sure want to exit?</string>
    <string name="jap_vie">JAP - ENG</string>
    <string name="vie_jap">ENG - JAP</string>
    <string name="enter_phrase_sentence_paragraph_here">Enter phrase, sentence, paragraph here.</string>
    <string name="result">Result</string>
    <string name="translate">Translate</string>
    <string name="speech_not_supported">Speech is not supported</string>
    <string name="speech_prompt">Say something...</string>
    <string name="translating">Translating....</string>
    <string name="read_this_sentence">Read this sentence.</string>
    <string name="next">Next</string>
    <string name="correct">Correct!</string>
    <string name="another_answer">Another answer</string>
    <string name="read_exactly_this_sentence">Read exactly this sentence.</string>
    <string name="translate_this_sentence">Translate this sentence</string>
    <string name="translate_what_you_heard">Translate what you heard</string>
    <string name="write_what_you_heard">Write what you heard</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="choose_the_sentence_that_you_heard">Choose the sentence that you heard</string>
    <string name="choose_the_right_meaning_of_this_sentence">Choose the right meaning of this sentence</string>
    <string name="choose_the_correct_meaning_of_the_sentence_that_you_heard">Choose the correct meaning of the sentence that you heard</string>
    <string name="check">Check</string>
    <string name="type_your_answer_here">Type your answer here...</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_completed_all_the_test">You have completed all the test</string>
    <string name="more">More</string>
    <string name="support">Support</string>
    <string name="more_app">More app</string>

</resources>
