<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="140dp"
    android:background="#ffffff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#0004d9"
        android:text="Thank you!"
        android:gravity="center"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/are_you_sure_want_to_exit"
        android:textColor="#ff0000"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_border"
        android:text="@string/exit"
        android:textColor="#ff0000"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_border"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="12sp"/>


</RelativeLayout>
