<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Result"
        android:background="#006adc"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/correct"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/txt_dialog_result"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_dialog_result"
        android:layout_marginTop="30dp"
        android:id="@+id/txt_dialog_text1"
        android:text="@string/another_answer"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_dialog_text2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_dialog_text1"
        android:text="japanese"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/next"
        android:background="@drawable/button_border"
        />
</RelativeLayout>