<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4359b0"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />


    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:maxLines="10"
                    android:gravity="left|top"
                    android:lines="5"
                    android:id="@+id/text_candich"
                    android:paddingTop="15dp"
                    android:paddingRight="50dp"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:background="@color/white"
                    android:layout_margin="10dp"
                    android:hint="@string/enter_phrase_sentence_paragraph_here"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"/>
                <ImageView
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:id="@+id/img_speak"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_micro"
                    />
                <ImageView

                    android:id="@+id/img_voice_input"
                    android:layout_marginRight="15dp"
                    android:layout_below="@+id/img_speak"
                    android:layout_alignParentRight="true"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/listen"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_jap_vie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#527aca"
                    android:text="@string/jap_vie"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_vie_jap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#527aca"
                    android:text="@string/vie_jap"
                    android:textColor="@color/white" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text=""
                    android:gravity="left|top"
                    android:id="@+id/text_ketqua"
                    android:lines="5"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="50dp"
                    android:paddingBottom="60dp"
                    android:background="@color/white"
                    android:layout_margin="10dp"
                    android:hint="@string/result"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"/>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/listen"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:id="@+id/img_voice_output"
                    android:layout_marginTop="20dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>

